--- a/it/youtube/_posts/2022-05-06-4-month.md
+++ b/it/youtube/_posts/2022-05-06-4-month.md
@@ -24,7 +24,7 @@ excerpt: "채널 4달 운영 회고"
 
 ### 유튜브 구독자 추세
 ![Image](https://drive.google.com/uc?export=view&id=1ViSb6-DW4zz2jb8aWmrs0yykAcx7HyN4)   
-구독자 증가 추세는 점점 바닥을 다지고 있으며, 문제는 구독자의 충성도이다. 필자의 채널은 충성도가 매우 낮으며 구독을 하더라도 재 방문이 이루어지지 않았다. 아쉽지만 이제 4달밖에 안되었으며 Shorts 위주인데 Shorts도 같은 카테고리가 아니다 보니 그런 것으로 예상된다. 꾸준히 영상을 업로드하며 천천히 팬층이 만들어지면 좋겠다.
+구독자 증가 추세는 점점 바닥을 다지고 있으며, 문제는 구독자의 충성도이다. 필자의 채널은 충성도가 매우 낮으며 구독을 하더라도 재 방문이 이루어지지 않았다. 아쉽지만 이제 4달밖에 안되었으며 Shorts 위주인데 Shorts도 같은 카테고리가 아니다 보니 그런 것으로 예상된다. 꾸준히 영상을 업로드하며 천천히 팬층이 만들어지면 좋겠다. 앞으로도 구독자 증가 수에 연연하지 않고 차근차근 영상을 업로드할 계획이다.
 
 ### 고난의 시간
 구독자 300 ~ 1000명의 구간은 고난의 시간이라고 한다. 다 그런 것은 아니겠지만 일반인의 채널로 1000명은 정말 큰 벽으로 느껴진다. 이전 달에 분석하기로 했던 [<i class="fas fa-link"></i> YouTube 분석 팁](https://support.google.com/youtube/answer/11912632?p=youtube_analytics_tips&visit_id=637843711200332089-1906177740&rd=1){:target="_blank"}을 읽어보도록 해야겠다.
@@ -32,14 +32,15 @@ excerpt: "채널 4달 운영 회고"
 ### 유튜브 조회수 추세
 ![Image](https://drive.google.com/uc?export=view&id=1wNsfSRiaByEXM7x5b_cqR-3MJCo2jCjw)  
 4월 초반 Shorts 영상 중 해리포터 관련 영상이 크게 조회수가 올라주며 채널 전체적으로 성과가 좋았으나, 이후 조회수는 급감하여 바닥을 다지고(?)있다.  
-올라가면 내려오는 것이 당연할 것이다. 앞으로도 구독자에 연연하지 않고 차근차근 영상을 업로드할 계획이다.
+올라가면 내려오는 것이 당연할 것이다. 조바심 내지 말고 유튜브 알고리즘을 믿고 기다리자!
 
 ### 시청 시간
 ![Image](https://drive.google.com/uc?export=view&id=1Dr9zlAx2DRsW8UWQfc4UEXbQIYjvMUyN)  
 * 시청 시간 104시간(+30시간)
 
 현재 채널의 가장 안 좋은 지표 중 시청 시간이 그나마 많이 개선되었다.  
-시청 시간을 늘리기 위해 Shorts를 줄이고 3분 이상 영상을 업로드하였다.
+시청 시간을 늘리기 위해 Shorts를 줄이고 3분 이상 영상을 업로드하였다.  
+4000시간은 엄청 큰 벽으로 느껴진다.😂
 
 ### 틱톡 추세
 ![Image](https://drive.google.com/uc?export=view&id=1YAMmovhJbAbJ4GE8s6xa84vOm9roiUvg)  
@@ -47,8 +48,8 @@ excerpt: "채널 4달 운영 회고"
 * 좋아요2936(+185)
 
 * 틱톡에서 커뮤니티 가이드라인 위반이 되었다.
-  * 가이드라인은 읽어보았으며 상식 선을 넘는 영상들이 문제였는데, 업로드해서 위반 된 영상은 `이게 위반인가?`라는 생각이 들어서 이의 제기를 했다. 영상은 삭제 되었으며 슬프게도 틱톡에서 답변은 아직 오지 않았다.
-  * [<i class="fas fa-link"></i> 콘텐츠 위반 및 정지](https://support.tiktok.com/ko/safety-hc/account-and-user-safety/content-violations-and-bans){:target="_blank"}항목을 읽어 보았고 비슷한 정지를 계속 받으면 계정에 불이익 또는 영구 삭제 될 수 있다. 필자의 계정 또한 공개 시간 대비 노출 수가 줄어 들었다.
+  * 가이드라인은 읽어보았으며 상식 선을 넘는 영상들이 문제였는데, 업로드해서 위반 된 영상은 `이게 위반인가?`라는 생각이 들어서 이의 제기를 했다. 영상은 삭제 되었으며 슬프게도 이의 제기는 가이드 라인 위반이었다.
+  * [<i class="fas fa-link"></i> 틱톡 콘텐츠 위반 및 정지](https://support.tiktok.com/ko/safety-hc/account-and-user-safety/content-violations-and-bans){:target="_blank"}항목을 읽어 보았고 비슷한 정지를 계속 받으면 계정에 불이익 또는 영구 삭제 될 수 있다. 필자의 계정 또한 공개 시간 대비 노출 수가 줄어 들었다.
 
 ### 인스타그램 추세
 ![Image](https://drive.google.com/uc?export=view&id=1u4TYL7R2nyPKkE-Dc85zUrcL0mMXP8mZ)  
@@ -62,12 +63,12 @@ excerpt: "채널 4달 운영 회고"
 > 필자의 채널이 댓글이 엄청 있는 것이 아니라서 앞으로 채널이 더 성장한다면 다시 한번 이 주제를 다뤄 볼 생각이다.  
 
 ## 다급해지지 말자.
-시청자의 수요가 많은 시간대를 찾아야 한다. 
+시청자의 수요가 많은 시간대를 찾아야 한다고 한다. 
 ```
 유튜브 분석 - 시청자층 - 내 시청자가 YouTube를 이용하는 시간대
 ```
 ![Image](https://drive.google.com/uc?export=view&id=1vS1HR4GPjSD88zGyQZyCVJ0tsWqcIFMr)  
-필자의 경우는 오후 3:00 ~ 오후 8:00가 시청자가 이용하는 시간대이다. 지금까지 이것을 간과하고 영상을 업로드했는데, 조금은 신경 써서 업로드할 예정이다.
+필자의 경우는 오후 3:00 ~ 오후 8:00가 시청자가 이용하는 시간대이다. 지금까지 이것을 간과하고 영상을 업로드했는데, 조금은 업로드 시간을 신경 써서 업로드할 예정이다.
 
 글 첫 시작에서 영상 업로드 개수를 목표로 한다고 했으나, 무리하게 업로드하지는 않을 것이다. 그래야 꾸준히 가능할 것이라고 생각한다. 
 
