--- a/it/youtube/_posts/2022-01-23-subscribe-100.md
+++ b/it/youtube/_posts/2022-01-23-subscribe-100.md
@@ -19,16 +19,16 @@ excerpt: "초보 유튜버의 기록"
 
 너무 기쁘고, 구독자 분들에게 감사한 마음과 함께 그간 고민했던 것을 작은 경험을 기록한다.  
 
-이 글은 구독자 100명을 모으기 위한 정답이 아닐 것이다. 이 글 자체가 조심스럽고, 자랑하는 것처럼 비추어 질까봐 망설여진다. 필자 역시 앞으로 생길 좌절과 고독 등 험난한 여정이 있을 것을 알고 있기 때문에, 운좋게도 달성한 첫 미션을 잊지 않고 기록하고자 적는다. 또한, 누군가에겐 힘이 되길 바라며 글을 쓴다. 누군가 유튜브 채널을 시작하고 구독자 100명이 목표라면 도움이 되고, 참고가 되었으면 좋겠다.   
+이 글은 구독자 100명을 모으기 위한 정답이 아닐 것이다. 이 글 자체가 조심스럽고, 자랑하는 것처럼 비추어 질까봐 망설여진다. 필자 역시 앞으로 생길 좌절과 고독 등 험난한 여정이 있을 것을 알고 있기 때문에, `운`좋게도 달성한 첫 미션을 잊지 않고 기록하고자 적는다. 또한, 누군가에겐 힘이 되길 바라며 글을 쓴다. 누군가 유튜브 채널을 시작하고 구독자 100명이 목표라면 도움이 되고, 참고가 되었으면 좋겠다.   
 
 ## 정보 조사
-유튜브를 채널 운영, 노하우 등을 시작하고 구독자 100명을 어떻게 모을 수 있는지을 통해 여러 정보를 검색했다.
+유튜브를 채널 운영, 노하우 등을 시작하고 구독자 100명을 어떻게 모을 수 있는지를 검색을 통해 정보를 찾아봤다.
 
 * 구글 검색
 * 유튜브 검색
 * 네이버 블로그 검색
 
-검색 결과에 업체에서 업로드한 느낌이 들거나(유료결제를 유도하는 글)은 보지 않았으며, 일반인이 운영하는 채널 위주의 정보를 읽었다.
+검색 결과에 업체에서 업로드한 느낌이 들거나(유료결제를 유도하는 글)은 거르고, 일반인이 운영하는 채널 위주의 정보를 읽었다.
 
 ## 소중한 구독자
 100명 달성의 순간.  
@@ -52,6 +52,8 @@ excerpt: "초보 유튜버의 기록"
 누군가의 반응은 멘탈관리에 든든한 지원이 될 것이다. 필자의 경우 가족이 바로 내 채널을 볼 수 있기 때문에, 운영과 영상 제작에 더 열심히 할 수 있었다.
 
 필자는 지인에게는 알리지 않았고, 가족과 와이프 처가까지 하여 10명으로 시작하였다.
+
+> 시작해보면 알겠지만 가족 10명도 잘 안 본다. 😂
 
 ### 시청자와의 소통
 시청자의 댓글이 많지 않다. 당연히 소중한 댓글이기에 하나하나 좋아요와 답글을 달아주었다.  
@@ -88,14 +90,14 @@ excerpt: "초보 유튜버의 기록"
 필자의 영상은 대부분 shorts 영상이며 30초가 안되는 영상이 대부분이라 빠르게 편집하여 올릴 수 있는 것이 장점이다.
 직장인이면서 취미로 유튜브를 하는 거라 많은 시간을 들일 수는 없지만 퇴근 후 남는 시간과 주말을 최대한 활용 했다.
 
-> 삭제한 영상은 틱톡 로고가 있는 영상이었다. 유튜브에 올리지 말자. 추후 Shorts 선정 수익에 걸림돌이 된다고 한다.
+> 삭제한 영상은 틱톡 로고가 있는 영상이었다. 유튜브에 올리지 말자. 추후 Shorts 선정 수익에 걸림돌이 된다고 한다. 하지만 걱정 말자.<br/>반문: Shorts 수익은 기대하기 어렵다.
 
 ## 좋은 컨텐츠
 필자도 좋은 컨텐츠가 무엇인지 잘 모른다. 그런데 좋은 컨텐츠는 구글, 틱톡 등의 알고리즘이 잘 캐치한다.    
 업로드된 영상은 두 플랫폼과 시간의 차이가 있으나, 대부분 비슷한 비율로 조회수가 올라간다. 
 알고리즘은 좋은 컨텐츠를 알아볼 수 있는 능력이 있음을 알게되었고 대단함을 느꼈다.
 그래서 좋은 컨텐츠는 매우매우 중요하다. 
-성장한 유튜버들의 글을 보면 대부분 반드시 좋은 "컨텐츠는 알고리즘이 많은 사람에게 추천해 줄 것이다." 라고 말한다.
+성장한 유튜버들의 글을 보면 대부분 "반드시 좋은 컨텐츠는 알고리즘이 많은 사람에게 추천해 줄 것이다." 라고 말한다.
 
 좋은 컨텐츠를 모르는데 그럼 어떻게 좋은 컨텐츠를 만들어야 하나? 란 고민이 생긴다.  
 필자의 경우 양 플랫폼에서 조회수가 잘 올라가는 영상과 비슷한 컨셉의 영상을 제작하려고 한다.    
