[Fix] 불필요한 RxSwift Wrapping 제거

--- a/ios/_posts/2022-01-07-sns-login.md
+++ b/ios/_posts/2022-01-07-sns-login.md
@@ -17,7 +17,6 @@ depth:
 - Google 로그인
 - Apple 로그인
 - Kakao 로그인
-- Payco 로그인
 
 ## Third party 설치
 ```
@@ -62,115 +61,27 @@ func application(_ app: UIApplication, open url: URL, options: [UIApplication.Op
 import GoogleSignIn
 import Firebase
 
-final class GoogleLogIn {
-    weak var target: UIViewController?
+let clientID = FirebaseApp.app()?.options.clientID
 
-    func logIn() -> Observable<LogInParameter> {
-        return Observable<LogInParameter>.create { observer in
-            guard let clientID = FirebaseApp.app()?.options.clientID,
-                  let presenting = self.target else {
-                      // Error
-                return Disposables.create()
-            }
+// Create Google Sign In configuration object.
+let config = GIDConfiguration(clientID: clientID)
+GIDSignIn.sharedInstance.signIn(with: config, presenting: presenting) { user, error in
+  if let error = error {
+    // Error
+    return
+  }
 
-            // Create Google Sign In configuration object.
-            let config = GIDConfiguration(clientID: clientID)
-            GIDSignIn.sharedInstance.signIn(with: config, presenting: presenting) { user, error in
-                if let error = error {
-                    // Error
-                    return
-                }
+  guard
+    let authentication = user?.authentication,
+    let idToken = authentication.idToken
+  else {
+    // Error
+    return
+  }
 
-                guard
-                    let authentication = user?.authentication,
-                    let idToken = authentication.idToken
-                else {
-                    // Error
-                    return
-                }
-
-                // 성공
-            }
-            return Disposables.create()
-        }
-    }
-
-    init(target: UIViewController) {
-        self.target = target
-    }
+  // 성공
 }
-```
-
-### PaycoLogIn
-[PAYCO 개발자 센터](https://developers.payco.com/guide/sdk/download)
-```swift
-import PIDThirdPartyAuth
-
-class PaycoSDKConfig: NSObject, PIDThirdPartyAuthDelegate {
-    private let config = PIDAuthThirdConfig()
-    static let shared = PaycoSDKConfig()
-    var onSuccess: ((LogInParameter) -> Void)?
-
-    private override init() {
-        super.init()
-
-        config.clientID = { clientID }
-        config.secret = { secret }
-        config.serviceCode = { serviceCode }
-        config.serviceName = { serviceName } 
-        config.targetScheme = { targetScheme } 
-
-        if Configuration.value(for: Configuration.Key.serverEnv) == "ALPHA" {
-            config.serverType = PIDServerTypeAlpha
-            config.showDebugLog = true
-        } else {
-            config.serverType = PIDServerTypeReal
-            config.showDebugLog = false
-        }
-
-        config.delegate = self
-        PIDThirdPartyAuth.setup(config)
-    }
-
-    func didSuccessLogin(_ userInfo: [AnyHashable: Any]!) {
-        guard let accessToken = userInfo[PIDAccessTokenKey] as? String else { return }
-
-        // 성공
-    }
-
-    func didFailLogin(_ error: PIDError!) {
-        if let errorType = PIDErrorType(rawValue: error.code), errorType == .cancelLogin {
-            // Cancel
-            return
-        }
-
-        // Error
-    }
-
-    func didSuccessLogout() {
-    }
-
-    func didFailLogout(_ error: PIDError!) {
-    }
-}
-
-final class PaycoLogIn: SnsLogInType {
-    private let config = PaycoSDKConfig.shared
-    weak var target: UIViewController?
-    func logIn() -> Observable<LogInParameter> {
-        PIDThirdPartyAuth.openLoginView()
-        return Observable<LogInParameter>.create { observer in
-            self.config.onSuccess = { parameters in
-                observer.onNext(parameters)
-            }
-            return Disposables.create()
-        }
-    }
-
-    init(target: UIViewController) {
-        self.target = target
-    }
-}
+  
 ```
 
 ### AppleLogIn
@@ -178,63 +89,45 @@ final class PaycoLogIn: SnsLogInType {
 import AuthenticationServices
 
 @available(iOS 13.0, *)
-final class AppleLogIn: NSObject {
-    private override init() {
-        super.init()
-    }
+let appleIDProvider = ASAuthorizationAppleIDProvider()
+let request = appleIDProvider.createRequest()
+request.requestedScopes = [.email]
 
-    static let shared = AppleLogIn()
-
-    weak var target: UIViewController?
-    var onSuccess: ((LogInParameter) -> Void)?
-    func logIn() -> Observable<LogInParameter> {
-        let appleIDProvider = ASAuthorizationAppleIDProvider()
-        let request = appleIDProvider.createRequest()
-        request.requestedScopes = [.email]
-
-        let authorizationController = ASAuthorizationController(authorizationRequests: [request])
-        authorizationController.delegate = self
-        authorizationController.presentationContextProvider = self
-        authorizationController.performRequests()
-        return Observable<LogInParameter>.create { observer in
-            self.onSuccess = { parameter in
-                observer.onNext(parameter)
-            }
-            return Disposables.create()
-        }
-    }
-}
+let authorizationController = ASAuthorizationController(authorizationRequests: [request])
+authorizationController.delegate = self
+authorizationController.presentationContextProvider = self
+authorizationController.performRequests()
 
 @available(iOS 13.0, *)
 extension AppleLogIn: ASAuthorizationControllerDelegate {
-    /// - Tag: did_complete_authorization
-    @available(iOS 13.0, *)
-    func authorizationController(controller: ASAuthorizationController, didCompleteWithAuthorization authorization: ASAuthorization) {
-        switch authorization.credential {
-        case let appleIDCredential as ASAuthorizationAppleIDCredential:
-            if let identityToken = appleIDCredential.identityToken,
-                let appleIdToken = String(data: identityToken, encoding: .utf8) {
-                // 성공
-            }
-        default:
-            // Error
-        }
+  /// - Tag: did_complete_authorization
+  @available(iOS 13.0, *)
+  func authorizationController(controller: ASAuthorizationController, didCompleteWithAuthorization authorization: ASAuthorization) {
+    switch authorization.credential {
+    case let appleIDCredential as ASAuthorizationAppleIDCredential:
+      if let identityToken = appleIDCredential.identityToken,
+        let appleIdToken = String(data: identityToken, encoding: .utf8) {
+        // 성공
+      }
+    default:
+      // Error
     }
+  }
 
-    /// - Tag: did_complete_error
-    @available(iOS 13.0, *)
-    func authorizationController(controller: ASAuthorizationController, didCompleteWithError error: Error) {
-        // Cencel
-    }
+  /// - Tag: did_complete_error
+  @available(iOS 13.0, *)
+  func authorizationController(controller: ASAuthorizationController, didCompleteWithError error: Error) {
+    // Cencel
+  }
 }
 
 @available(iOS 13.0, *)
 extension AppleLogIn: ASAuthorizationControllerPresentationContextProviding {
-    /// - Tag: provide_presentation_anchor
-    @available(iOS 13.0, *)
-    func presentationAnchor(for controller: ASAuthorizationController) -> ASPresentationAnchor {
-        return UIApplication.shared.keyWindow!
-    }
+  /// - Tag: provide_presentation_anchor
+  @available(iOS 13.0, *)
+  func presentationAnchor(for controller: ASAuthorizationController) -> ASPresentationAnchor {
+    return UIApplication.shared.keyWindow!
+  }
 }
 ```
 
@@ -243,36 +136,22 @@ extension AppleLogIn: ASAuthorizationControllerPresentationContextProviding {
 ```swift
 import KakaoSDKUser
 
-final class KakaoLogIn {
-    weak var target: UIViewController?
-
-    func logIn() -> Observable<LogInParameter> {
-        return Observable.create { observer in
-            // 카카오톡 설치 여부 확인
-            if UserApi.isKakaoTalkLoginAvailable() {
-                UserApi.shared.loginWithKakaoTalk { (oauthToken, error) in
-                    if let error = error {
-                       // Error
-                    } else if let oauthToken = oauthToken {
-                        // 성공
-                    }
-                }
-            } else {
-                UserApi.shared.loginWithKakaoAccount(prompts: [.Login]) { (oauthToken, error) in
-                    if let error = error {
-                        // Error
-                    } else if let oauthToken = oauthToken {
-                        // 성공
-                    }
-                }
-            }
-            return Disposables.create()
-        }
+if UserApi.isKakaoTalkLoginAvailable() {
+  UserApi.shared.loginWithKakaoTalk { (oauthToken, error) in
+    if let error = error {
+      // Error
+    } else if let oauthToken = oauthToken {
+      // 성공
     }
-
-    init(target: UIViewController) {
-        self.target = target
+  }
+} else {
+  UserApi.shared.loginWithKakaoAccount(prompts: [.Login]) { (oauthToken, error) in
+    if let error = error 
+      // Error
+    } else if let oauthToken = oauthToken {
+      // 성공
     }
+  }
 }
 ```
 
@@ -282,88 +161,17 @@ final class KakaoLogIn {
 ```swift
 import FBSDKLoginKit
 
-final class FacebookLogIn {
-    weak var target: UIViewController?
-
-    func logIn() -> Observable<LogInParameter> {
-        return Observable.create { observer in
-            let loginManager = LoginManager()
-            loginManager.logIn(permissions: ["email"], from: self.target) { result, error in
-                // Process result or error
-                if let error = error {
-                    // Error
-                } else if let result = result {
-                    if result.isCancelled {
-                        // Cancel
-                    } else if let token = result.token {
-                        // 성공
-                    }
-                }
-            }
-            return Disposables.create()
-        }
-    }
-
-    init(target: UIViewController) {
-        self.target = target
-    }
-}
-```
-
-## Login을 Rx로 Wrapping
-```swift
-extension Observable {
-    func facebookLogIn(target: UIViewController) -> Observable<LogInParameter> {
-        return flatMap { _ -> Observable<LogInParameter> in
-            return FacebookLogIn(target: target).logIn()
-        }
-    }
-
-    func kakaoLogIn(target: UIViewController) -> Observable<LogInParameter> {
-        return flatMap { _ -> Observable<LogInParameter> in
-            return KakaoLogIn(target: target).logIn()
-        }
-    }
-
-    func googleLogIn(target: UIViewController) -> Observable<LogInParameter> {
-        return flatMap { _ -> Observable<LogInParameter> in
-            return GoogleLogIn(target: target).logIn()
-        }
-    }
-    @available(iOS 13.0, *)
-    func appleLogIn(target: UIViewController) -> Observable<LogInParameter> {
-        return flatMap { _ -> Observable<LogInParameter> in
-            AppleLogIn.shared.target = target
-            return AppleLogIn.shared.logIn()
-        }
-    }
-
-    func paycoLogIn(target: UIViewController) -> Observable<LogInParameter> {
-        return flatMap { _ -> Observable<LogInParameter> in
-            return PaycoLogIn(target: target).logIn()
-        }
-    }
-}
-```
-## Controller에서 로그인 Event 호출하기
-```swift
-facebookLoggedInButton = LogInButton()
-facebookLoggedInButton.tapEvent
-    .facebookLogIn(target: self)
-    .map { Reactor.Action.fetchLogIn($0) }
-    .bind(to: reactor.action)
-    .disposed(by: disposeBag)
-
-```
-
-## Reactor 에서 서비스 로그인 API usecase 호출
-```swift
-func mutate(action: Action) -> Observable<Mutation> {
-    switch action {
-    case .fetchLogIn(let parameter):
-        return memberUsecase.logIn(parameter: parameter)
-            .asObservable()
-            .asMutation()
-    }
+let loginManager = LoginManager()
+loginManager.logIn(permissions: ["email"], from: self.target) { result, error in
+  // Process result or error
+  if let error = error {
+  // Error
+  } else if let result = result {
+    if result.isCancelled {
+      // Cancel
+    } else if let token = result.token {
+      // 성공
+    }
+  }
 }
 ```
