[Fix] renamed to CPU -> Memory

--- a/cs/memory/_posts/2022-05-21-32bit-vs-64bit.md
+++ b/cs/memory/_posts/2022-05-21-32bit-vs-64bit.md
@@ -7,13 +7,13 @@ title: "32Bit vs 64Bit 누가 더 빠를까?"
 toc: true
 toc_sticky: true
 toc_label: 목차
-tag: "CPU"
+tag: "CS Memory"
 depth:
   - title: "CS"
     url: /cs/
     icon: "fas fa-microchip"
-  - title: "CPU"
-    url: /cs/cpu/
+  - title: "Memory"
+    url: /cs/memory/
     icon: "far fa-folder-open"
 use_math: true
 ---
