[Post] 에러 케이스 추가

--- a/git/blog/_posts/2021-08-18-start.md
+++ b/git/blog/_posts/2021-08-18-start.md
@@ -74,6 +74,12 @@ config.yml 를 수정하면 재시작이 필요하다.
 bundle exec jekyll serve
 ```
 
+> You have already activated public_suffix 4.0.7, but your Gemfile requires public_suffix 4.0.6. Prepending `bundle exec` to your command may solve this<br/><br/>
+만약 위와 같은 메시지의 에러가 발생한다면 아래 명령어를 입력하면 해결 된다.
+```
+bundle clean --force
+```
+
 ### 3.2 로컬 서버 종료
 ```
 ctrl-c
