[Post] 내용 일부 수정

--- a/it/conference/_posts/2022-07-22-slash22.md
+++ b/it/conference/_posts/2022-07-22-slash22.md
@@ -14,19 +14,22 @@ header:
   overlay_image: https://static.toss.im/assets/homepage/slash22/giftbox.png
 excerpt: "Thanks Toss!"
 ---
-
-작년과 마찬가지로 온라인 컨퍼런스를 한 토스의 IT 컨퍼런스[<i class="fas fa-link"></i> SLASH22](https://toss.im/slash-22){:target="_blank"}를 라이브 또는 영상으로 시청했다.  
+작년과 마찬가지로 온라인 컨퍼런스를 한 토스의 IT 컨퍼런스[<i class="fas fa-link"></i> SLASH22](https://toss.im/slash-22){:target="_blank"}를 라이브와 유튜브 영상으로 시청했다.  
 
 >Slash는 ‘획을 긋다’라는 의미라고 한다. 토스의 엔지니어들이 사용자의 삶에 새로운 변화를 만들기 위해 관습을 깨고, 기술 혁신의 한 획을 그었던 경험들을 축약한 키워드라고 한다.
 
-업무 시간에 진행되어서 동료에게 링크를 공유하고 반 공식(?)적으로 시청할 수 있었다. 
+업무 시간에 진행되어 동료에게 링크를 공유하고 반 공식(?)적으로 시청할 수 있었다. 
 
-시청 시 약 300~400명의 동시 시청자가 있던 거로 기억한다. 채팅창은 이벤트로 읽을 수 없을 정도록 폭발적인 반응이었다.  친절하게 진행된 컨퍼런스 영상은 유튜브에 업로드 해주어 얼마나 고마운지..😍  
-매번 새로운 길을 간다는 토스.. 그리고 토스 피드를 통한 문화 전파.. 블라인드에 수 없는 글까지..  
+시청 시 많은 동시 시청자의 채팅창은 이벤트로 읽을 수 없을 정도록 폭발적인 반응이었다.  
+친절하게 진행된 컨퍼런스 영상은 유튜브에 업로드 해주어 얼마나 고마운지..😍  
+매번 새로운 길을 간다는 토스.. 
+토스 피드를 통한 문화 전파.. 블라인드에 수 없는 글까지..  
+IT 개발자 사이에서 많은 관심을 가지는 기업이 아닐까 싶다.  
 
-이제 토스란 회사는 IT 산업 전반의 좋은 문화를 전파하고 기술적으로 뛰어난 모습을 많이 보여주고 있다. 대단한 사람들이 모인 회사임은 틀림없다.  
+이제 토스란 회사는 IT 산업 전반의 좋은 문화를 전파하고 기술적으로 뛰어난 모습을 많이 보여주고 있다.  
+대단한 사람들이 모인 회사임은 틀림없다.  
 
-이렇게 고퀄리티 음악과 영상 편집에 너무 놀랐다. 사전 녹화를 방식은 매우 탁월한 선택이었다. 이런 편집과 음악에 발표하는 개발자들을 얼마나 보람차고 설레일까.. 한편으로는 부러웠다.. 
+고퀄리티 음악과 영상 편집에 너무 놀랐다. 사전 녹화를 방식은 매우 탁월한 선택이었다. 이런 편집과 음악에 발표하는 개발자들을 얼마나 보람차고 설레일까.. 한편으로는 부러웠다.. 
 
 ~~다만 발표자의 카메라 포커싱이 불필요하게 변경되는 것은 아쉬웠다.~~
 
