[Post] 오늘 - 문구 추가

--- a/clean/think/_posts/2018-09-05-today.md
+++ b/clean/think/_posts/2018-09-05-today.md
@@ -45,7 +45,9 @@ depth:
 그 작업이 완성되어서 노가다의 결과물로 프로그래밍을 이어나갈 때 점점 간결해 지는 코드를 보고 '오호~?' 하는 느낌이 들었다.  
 릴리즈 후 Git PR 의 코드를 보고, 노가다의 결과물을 이용한 코드들을 보면서 성취감과 작은 뿌듯함을 느꼈다.  
 
-노가다 작업도 지루했지만 결과적으로 더 좋은 결과물을 위한 기계적인 작업이었던 것 같다.
+노가다 작업도 지루했지만 결과적으로 더 좋은 결과물을 위한 기계적인 작업이었던 것 같다.  
+
+오늘 재미없는 일과를 했지만 멀게 봐서는 앞으로 더 좋아지게 될 프로젝트의 초석일지도 모른다.  
 
 ## 어제보다 오늘 만든 것이 더 좋은가?
 
