[Post] 오늘 - 이미지 추가

--- a/clean/think/_posts/2018-09-05-today.md
+++ b/clean/think/_posts/2018-09-05-today.md
@@ -51,5 +51,7 @@ depth:
 
 ## 어제보다 오늘 만든 것이 더 좋은가?
 
+![Image](https://drive.google.com/uc?export=view&id=1TiCrMHYycR3ejs6Tr0EEQ0ZsV4ftuu-E)  
+
 평소 작은 부분부터 개선할 수 있는 부분을 찾아 나가는 것은 매우 중요하다고 생각한다.  
 어제보다 오늘 만든 것이 더 좋다면, 어제보다 오늘 더 좋은 개발자가 된거다!  
