[Post] title 오타 수정

--- a/architecture/agile/_posts/2022-08-22-kanban.md
+++ b/architecture/agile/_posts/2022-08-22-kanban.md
@@ -3,7 +3,7 @@ sidebar:
   title: "Architecture"
   nav: sidebar-architecture
   icon: "fas fa-sitemap"
-title: "[애지알] 칸반"
+title: "[Agile] 칸반"
 toc: true
 toc_sticky: true
 toc_label: 목차
