--- a/architecture/composable-architecture/_posts/2022-09-23-ribs.md
+++ b/architecture/composable-architecture/_posts/2022-09-23-ribs.md
@@ -17,3 +17,8 @@ depth:
     icon: "far fa-folder-open"
 ---
 [<i class="fas fa-link"></i> RIBs](https://github.com/uber/RIBs){:target="_blank"} 아키텍처는 Composition을 활용하여 비지니스 로직을 트리구조를 사용하여 수직적인 계층으로 쪼개는 것에 초점이 맞추어저 있다. 작은 객체로 쪼갠 후 요소들이 일관성 있는 통신 방법을 통해 아키텍처에 익숙하지 않은 팀원에게도 프로젝트를 익숙하도록 개선할 수 있다.  
+
+## if(kakao)2020 카카오페이 관련 세션에서도 소개 된 적이 있다.
+[<i class="fas fa-link"></i>어서오세요 RIBs입니다. 카카오페이 비즈니스앱 개발기](https://if.kakao.com/2020/session/80){:target="_blank"}
+
+<embed width="640" height="360" src="https://tv.kakao.com/embed/player/cliplink/414004680?service=kakao_tv">
