[Post] ribs - 오타 수정

--- a/architecture/composable-architecture/_posts/2022-09-23-ribs.md
+++ b/architecture/composable-architecture/_posts/2022-09-23-ribs.md
@@ -26,28 +26,28 @@ depth:
 ## Riblets이란?
 ![Image](https://github.com/uber/ribs/raw/assets/documentation/ribs.png)
 
-Router, Interactor, Builder, (optional)View의 단위를 묶어서 말할때 쓰인다.  
+Router, Interactor, Builder, (optional) View의 단위를 묶어서 말할 때 쓰인다.  
 
 
 ## Builder
-Riblets의 객체를 생성한다.
+Riblets의 객체를 생성하고 Router를 리턴한다.
 
 ```swift
 func build(withListener listener: Listener) -> ViewableRouting {
 ```
 ### Components
-로직을 생성할때 필요한 데이터를 담는 것을 담당한다.
+로직을 생성할 때 필요한 데이터를 담는 것을 담당한다.
 
 ### Interactor
-비지니스 로직을 담당한다.
+비즈니스 로직을 담당한다.
 
 ### Router
-Riblets간의 이동을 담당한다. 자식 Riblets을 유동적으로 붙일 수도, 떼어 낼 수도 있는 것이 Router의 역할이다.  
+Riblets 간의 이동을 담당한다. 자식 Riblets을 유동적으로 붙일 수도, 떼어 낼 수도 있는 것이 Router의 역할이다.  
 
-> RIBs는 트리구조를 기반으로 한다.</br>따라 하나의 Riblets은 여러 자식 Riblets을 가질 수 있으며, 하나의 부모 Riblets을 가진다. 
+> RIBs는 트리구조를 기반으로 한다.<br/>하나의 Riblets은 여러 자식 Riblets을 가질 수 있으며, 하나의 부모 Riblets을 가진다. 
 
 ### attachChild()
-attachChild()은 RIBs의 내부 메서드이며, 부모 Riblets은 자식 Riblets을 연결하며 Riblets의 Lifecyle을 관리하기 위해 사용 된다.  
+attachChild()은 RIBs의 내부 메서드이며, 부모 Riblets은 자식 Riblets을 연결하며 Riblets의 Lifecyle을 관리하기 위해 사용된다.  
 
 ```swift
 let calendarHomeRouting = calendarHome.build(withListener: interactor)
