--- a/architecture/composable-architecture/_posts/2022-09-23-ribs.md
+++ b/architecture/composable-architecture/_posts/2022-09-23-ribs.md
@@ -35,11 +35,13 @@ Riblets의 객체를 생성하고 Router를 리턴한다.
 ```swift
 func build(withListener listener: Listener) -> ViewableRouting {
 ```
-### Components
-로직을 생성할 때 필요한 데이터를 담는 것을 담당한다.
+### Component
+로직을 생성할 때 필요한 데이터를 담는 것을 담당한다. 필요한 자식 Riblets의 Dependency 또한 Component에서 Confirm한다.
+
+![Image](https://drive.google.com/uc?export=view&id=1P28BFz2NKBVh4SL1VLlRGwwSyliQz5KC)  
 
 ### Interactor
-비즈니스 로직을 담당한다.
+비즈니스 로직을 담당한다. 모든 로직의 시작점이다.
 
 ### Router
 Riblets 간의 이동을 담당한다. 자식 Riblets을 유동적으로 붙일 수도, 떼어 낼 수도 있는 것이 Router의 역할이다.  
