--- a/architecture/software-engineering/_posts/2021-11-01-solid.md
+++ b/architecture/software-engineering/_posts/2021-11-01-solid.md
@@ -16,7 +16,22 @@ depth:
     url: /architecture/software-engineering/
     icon: "far fa-folder-open"
 ---
-5가지 설계 원칙
+객체 지향의 5가지 설계 원칙이 있다. 아주 오래전부터 내려오던 디자인 패턴이다.  
+> 설계는 '객체'의 기능의 관계이다.
+
+코딩을 하면서 항상 생각하는 것이 중요하며, 시간이 지남에 따라 경험이 쌓이고 프로젝트를 관리하며 OOP를 인지하는 것은 매우 중요하다.  
+
+시니어가 되면 이러한 패턴을 익혀 후배 개발자에게 경험을 바탕으로 전달하는 것이 필요하고, 코드 리뷰는 항상 이러한 원칙을 기반으로 생각하고 진행하는 것이 좋다.  
+
+> 객체에게 데이터를 요구하지 말고 작업을 요청하라.
+
+* 객체 : class
+* 작업 : 기능
+
+'무엇을 객체화할 것인가?'로 시작하는 것에 대한 정답은 없다.  
+다만 '데이터를 요구하지 말라'는 매우 명확한데, 객체에게 데이터를 요청하는 것은 객체 지향을 깨트리는 것이다.
+
+객체지향의 5원칙(SOLID)을 알아보자.
 
 ## [SRP] 단일 책임 원칙 - Single Responsibility
 콘웨이(Conway) 법칙에 따름 정리 : 소프트웨어 시스템이 가질 수 있는 최적의 구조는 시스템을 만드는 조직의 사회적 구조에 커다란 영향을 받는다. 따라서 각 소프트웨어 모듈은 변경의 이유가 하나, 단 하나여야만 한다.
