--- a/architecture/software-engineering/_posts/2021-11-01-solid.md
+++ b/architecture/software-engineering/_posts/2021-11-01-solid.md
@@ -34,7 +34,50 @@ depth:
 객체지향의 5원칙(SOLID)을 알아보자.
 
 ## [SRP] 단일 책임 원칙 - Single Responsibility
-콘웨이(Conway) 법칙에 따름 정리 : 소프트웨어 시스템이 가질 수 있는 최적의 구조는 시스템을 만드는 조직의 사회적 구조에 커다란 영향을 받는다. 따라서 각 소프트웨어 모듈은 변경의 이유가 하나, 단 하나여야만 한다.
+Single Responsibility Principle은 하나의 클래스는 하나의 책임만 가지도록 하는 것을 의미한다.
+
+예를 들어, iOS 앱에서 로그인 기능을 구현한다고 가정한다면, 로그인 기능에 필요한 모든 것을 포함하는 Login 클래스를 작성할 수 있다. 하지만 이렇게 하면 Login 클래스가 너무 많은 책임을 갖게 되어 SRP를 위배하게 됩니다.
+
+그래서 Login 클래스의 책임을 분리하고, User Model을 다루는 User class와 네트워크 통신을 다루는 NetworkManager 클래스를 추가로 만들 수 있다. 이렇게 분리하면 각 Class는 자신의 책임에만 집중하게 되어 코드 유지보수가 쉬워지고, 다른 class에 영향을 주지 않고 수정할 수 있다.
+
+```swift
+class User {
+  var email: String
+  var password: String
+  
+  init(email: String, password: String) {
+    self.email = email
+    self.password = password
+  }
+}
+
+class NetworkManager {
+  func login(user: User, completion: (Bool) -> Void) {
+    // 네트워크 통신으로 로그인 기능을 구현
+  }
+}
+
+class LoginViewModel {
+  var user: User
+  
+  init(user: User) {
+    self.user = user
+  }
+  
+  func login(completion: (Bool) -> Void) {
+    let networkManager = NetworkManager()
+    networkManager.login(user: user) { success in
+        completion(success)
+    }
+  }
+}
+
+```
+
+위의 코드에서 User class는 User model을 다루는 책임을 갖고, NetworkManager class는 네트워크 통신을 다루는 책임을 갖습니다. 마지막으로 LoginViewModel 클래스는 User와 NetworkManager를 조합하여 로그인 기능을 구현하는 책임을 갖는다. 이렇게 책임을 분리하면 각 class가 하나의 책임만 갖게 되어 SRP를 준수하게 된다.
+
+> 콘웨이(Conway) 법칙에 따름 정리 : 소프트웨어 시스템이 가질 수 있는 최적의 구조는 시스템을 만드는 조직의 사회적 구조에 커다란 영향을 받는다. 따라서 각 소프트웨어 모듈은 변경의 이유가 하나, 단 하나여야만 한다.<br/><br/>
+「Clean Architecture 中」
 
 ## [OCP] 개방-폐쇄 원칙 - Open-Closed
 1980년대에 버트란트 마이어(Burtand Meyer)에 의해 유명해진 원칙이다. 기존 코드를 수정하기보다는 반드시 새로운 코드를 추가하는 방식으로 시스템의 행위를 변경할 수 있도록 설계해야만 소프트웨어 시스템을 쉽게 변경 할 수 있다는 것이 이 원칙의 요지다.
