--- a/architecture/software-engineering/_posts/2021-11-01-solid.md
+++ b/architecture/software-engineering/_posts/2021-11-01-solid.md
@@ -28,17 +28,17 @@ depth:
 * 객체 : class
 * 작업 : 기능
 
-'무엇을 객체화할 것인가?'로 시작하는 것에 대한 정답은 없다.  
-다만 '데이터를 요구하지 말라'는 매우 명확한데, 객체에게 데이터를 요청하는 것은 객체 지향을 깨트리는 것이다.
+「무엇을 객체화할 것인가?」로 시작하는 것에 대한 정답은 없다.  
+다만 「데이터를 요구하지 말라」는 매우 명확한데, 객체에게 데이터를 요청하는 것은 객체 지향을 깨트리는 것이다.
 
-객체지향의 5원칙(SOLID)을 알아보자.
+객체 지향의 5원칙(SOLID)을 알아보자.
 
 ## [SRP] 단일 책임 원칙 - Single Responsibility
-Single Responsibility Principle은 하나의 클래스는 하나의 책임만 가지도록 하는 것을 의미한다.
+Single Responsibility Principle은 하나의 class는 하나의 책임만 가지도록 하는 것을 의미한다.
 
-예를 들어, iOS 앱에서 로그인 기능을 구현한다고 가정한다면, 로그인 기능에 필요한 모든 것을 포함하는 Login 클래스를 작성할 수 있다. 하지만 이렇게 하면 Login 클래스가 너무 많은 책임을 갖게 되어 SRP를 위배하게 됩니다.
+로그인 기능을 구현한다고 가정한다면, 로그인 기능에 필요한 모든 것을 포함하는 Login class를 작성할 수 있다. 하지만 이렇게 하면 Login class가 너무 많은 책임을 갖게 되어 SRP를 위배하게 된다.
 
-그래서 Login 클래스의 책임을 분리하고, User Model을 다루는 User class와 네트워크 통신을 다루는 NetworkManager 클래스를 추가로 만들 수 있다. 이렇게 분리하면 각 Class는 자신의 책임에만 집중하게 되어 코드 유지보수가 쉬워지고, 다른 class에 영향을 주지 않고 수정할 수 있다.
+그래서 Login class의 책임을 분리하고, User Model을 다루는 User class와 네트워크 통신을 다루는 NetworkManager class를 추가로 만들 수 있다. 이렇게 분리하면 각 Class는 자신의 책임에만 집중하게 되어 코드 유지보수가 쉬워지고, 다른 class에 영향을 주지 않고 수정할 수 있다.
 
 ```swift
 class User {
@@ -74,13 +74,68 @@ class LoginViewModel {
 
 ```
 
-위의 코드에서 User class는 User model을 다루는 책임을 갖고, NetworkManager class는 네트워크 통신을 다루는 책임을 갖습니다. 마지막으로 LoginViewModel 클래스는 User와 NetworkManager를 조합하여 로그인 기능을 구현하는 책임을 갖는다. 이렇게 책임을 분리하면 각 class가 하나의 책임만 갖게 되어 SRP를 준수하게 된다.
+위의 코드에서 User class는 User model을 다루는 책임을 갖고, NetworkManager class는 네트워크 통신을 다루는 책임을 갖는다. 마지막으로 LoginViewModel class는 User와 NetworkManager를 조합하여 로그인 기능을 구현하는 책임을 갖는다. 이렇게 책임을 분리하면 각 class가 하나의 책임만 갖게 되어 SRP를 준수하게 된다.
 
 > 콘웨이(Conway) 법칙에 따름 정리 : 소프트웨어 시스템이 가질 수 있는 최적의 구조는 시스템을 만드는 조직의 사회적 구조에 커다란 영향을 받는다. 따라서 각 소프트웨어 모듈은 변경의 이유가 하나, 단 하나여야만 한다.<br/><br/>
 「Clean Architecture 中」
 
 ## [OCP] 개방-폐쇄 원칙 - Open-Closed
-1980년대에 버트란트 마이어(Burtand Meyer)에 의해 유명해진 원칙이다. 기존 코드를 수정하기보다는 반드시 새로운 코드를 추가하는 방식으로 시스템의 행위를 변경할 수 있도록 설계해야만 소프트웨어 시스템을 쉽게 변경 할 수 있다는 것이 이 원칙의 요지다.
+Open/Closed Principle은 소프트웨어 개체(class, 모듈, 함수 등)는 확장에는 열려 있으나 변경에는 닫혀 있어야 한다는 원칙이다. 이 원칙을 준수하면 기존 코드의 수정 없이도 새로운 기능을 추가할 수 있으므로 코드의 유지보수성이 높아진다.
+
+다양한 종류의 음악을 재생하는 MusicPlayer class를 작성한다면, MusicPlayer class는 다양한 유형의 음악 파일을 재생할 수 있어야 하므로 각 음악 파일의 유형에 따라 재생 방법이 달라져야 하며, 초기에는 MP3 파일과 AAC 파일만 지원한다고 가정한다.
+
+이 경우, MusicPlayer class는 다음과 같이 작성할 수 있다.
+
+```swift
+class MusicPlayer {
+  func playMP3(_ file: String) {
+    // MP3 파일 재생
+  }
+  
+  func playAAC(_ file: String) {
+    // AAC 파일 재생
+  }
+}
+
+```
+하지만 이렇게 작성하면 새로운 음악 파일 유형이 추가될 때마다 MusicPlayer class를 수정해야 하며, 이는 OCP를 위배하게 된다.
+
+따라서 MusicPlayer class를 확장 가능하도록 수정해야 한다. 이를 위해 각 음악 파일 유형마다 새로운 class를 작성하고, 이를 MusicPlayer에서 사용하도록 만들어야 한다.
+
+```swift
+protocol MusicPlayable {
+  func play(_ file: String)
+}
+
+class MP3Player: MusicPlayable {
+  func play(_ file: String) {
+    // MP3 파일 재생
+  }
+}
+
+class AACPlayer: MusicPlayable {
+  func play(_ file: String) {
+    // AAC 파일 재생
+  }
+}
+
+class MusicPlayer {
+  private var players: [MusicPlayable] = [MP3Player(), AACPlayer()]
+  
+  func play(_ file: String) {
+    for player in players {
+      player.play(file)
+    }
+  }
+}
+```
+
+위의 코드에서 MusicPlayable 프로토콜은 음악 파일 유형마다 재생 방법을 추상화한 것입니다. MP3Player와 AACPlayer class는 각각 MP3 파일과 AAC 파일을 재생하는 방법을 구현한다. 마지막으로 MusicPlayer class에서는 MusicPlayable을 준수하는 class의 인스턴스를 players 배열에 저장하고, play 메서드에서 players 배열을 순회하면서 파일을 재생한다.
+
+이렇게 코드를 작성하면 새로운 음악 파일 유형이 추가될 때마다 MusicPlayable을 준수하는 새로운 class를 작성하면 되므로 기존 코드를 수정할 필요가 없어져 OCP를 준수하게 된다.
+
+> 1980년대에 버트란트 마이어(Burtand Meyer)에 의해 유명해진 원칙이다. 기존 코드를 수정하기보다는 반드시 새로운 코드를 추가하는 방식으로 시스템의 행위를 변경할 수 있도록 설계해야만 소프트웨어 시스템을 쉽게 변경 할 수 있다는 것이 이 원칙의 요지다.<br/><br/>
+「Clean Architecture 中」
 
 ## [LSP] 리스코프 치환 원칙 - Liskov Substitution
 1988년 바바라 리스코프(Barbara Liskov)가 정의한, 하위 타입(subtype)에 관한 유명한 원칙이다. 요약하면, 상호 대체 가능한 구성요소를 이용해 소프트웨어의 시스템을 만들 수 있으려면, 이들 구성요소는 반드시 서로 치환 가능해야 한다는 계약을 반드시 지켜야한다.
