--- a/architecture/software-engineering/_posts/2021-11-01-solid.md
+++ b/architecture/software-engineering/_posts/2021-11-01-solid.md
@@ -130,7 +130,7 @@ class MusicPlayer {
 }
 ```
 
-위의 코드에서 `MusicPlayable` 프로토콜은 음악 파일 유형마다 재생 방법을 추상화한 것입니다. `MP3Player`와 `AACPlayer` class는 각각 MP3 파일과 AAC 파일을 재생하는 방법을 구현한다. 마지막으로 `MusicPlayer` class에서는 `MusicPlayable`을 준수하는 class의 인스턴스를 `players` 배열에 저장하고, `play` 메서드에서 `players` 배열을 순회하면서 파일을 재생한다.
+위의 코드에서 `MusicPlayable` protocol은 음악 파일 유형마다 재생 방법을 추상화한 것입니다. `MP3Player`와 `AACPlayer` class는 각각 MP3 파일과 AAC 파일을 재생하는 방법을 구현한다. 마지막으로 `MusicPlayer` class에서는 `MusicPlayable`을 준수하는 class의 인스턴스를 `players` 배열에 저장하고, `play` 메서드에서 `players` 배열을 순회하면서 파일을 재생한다.
 
 이렇게 코드를 작성하면 새로운 음악 파일 유형이 추가될 때마다 `MusicPlayable`을 준수하는 새로운 class를 작성하면 되므로 기존 코드를 수정할 필요가 없어져 OCP를 준수하게 된다.
 
@@ -209,7 +209,43 @@ printArea(ellipse)
 「Clean Architecture 中」
 
 ## [ISP] 인터페이스 분리 원칙 - Interface Segregation Principle
+Interface Segregation Principle(ISP)는 하나의 클라이언트가 사용하지 않는 인터페이스에 의존하지 않도록 하기 위한 객체지향 설계 원칙이다.
 
+다음과 같은 protocol이 있다고 가정해보면,
+
+```swift
+protocol Worker {
+  func work()
+  func eat()
+  func sleep()
+}
+```
+
+위의 protocol에서는 `work()`, `eat()`, `sleep()` 함수가 모두 포함되어 있다. 그러나, 실제로 이 protocol을 구현하는 class에서는 모든 함수를 사용하지 않을 수 있다. 예를 들어, `Farmer` class에서는 일하는 메서드만 필요할 수 있다. 이 경우, `Farmer` class에서는 `eat()`와 `sleep()` 함수를 구현하지 않더라도, protocol을 구현하는 것이 강제됩니다.
+
+이러한 경우, ISP를 준수하면 인터페이스를 적절하게 분리할 수 있다. `Farmer` class에서는 `work()` 메서드만 필요하므로, 따로 분리된 `Workable` protocol을 구현하는 것이 더 적절하다.
+
+```swift
+protocol Workable {
+  func work()
+}
+
+protocol Feedable {
+  func eat()
+}
+
+protocol Sleepable {
+  func sleep()
+}
+
+class Farmer: Workable {
+  func work() {
+    // do work
+  }
+}
+```
+
+위와 같이 인터페이스를 적절하게 분리하여, `Farmer` class에서 필요한 기능만 구현할 수 있으며, 불필요한 메서드에 대한 의존성이 제거된다. 이는 코드의 유연성과 확장성을 높이는데 도움을 준다.
 
 > 이 원칙에 따르면 소프트웨어 설계자는 사용하지 않은 것에 의존하지 않아야 한다.<br/><br/>
 「Clean Architecture 中」
