--- a/architecture/software-engineering/_posts/2021-11-01-solid.md
+++ b/architecture/software-engineering/_posts/2021-11-01-solid.md
@@ -130,7 +130,7 @@ class MusicPlayer {
 }
 ```
 
-위의 코드에서 `MusicPlayable` protocol은 음악 파일 유형마다 재생 방법을 추상화한 것입니다. `MP3Player`와 `AACPlayer` class는 각각 MP3 파일과 AAC 파일을 재생하는 방법을 구현한다. 마지막으로 `MusicPlayer` class에서는 `MusicPlayable`을 준수하는 class의 인스턴스를 `players` 배열에 저장하고, `play` 메서드에서 `players` 배열을 순회하면서 파일을 재생한다.
+위의 코드에서 `MusicPlayable` protocol은 음악 파일 유형마다 재생 방법을 추상화한 것입니다. `MP3Player`와 `AACPlayer` class는 각각 MP3 파일과 AAC 파일을 재생하는 방법을 구현한다. 마지막으로 `MusicPlayer` class에서는 `MusicPlayable`을 준수하는 class의 인스턴스를 `players` 배열에 저장하고, `play` 함수에서 `players` 배열을 순회하면서 파일을 재생한다.
 
 이렇게 코드를 작성하면 새로운 음악 파일 유형이 추가될 때마다 `MusicPlayable`을 준수하는 새로운 class를 작성하면 되므로 기존 코드를 수정할 필요가 없어져 OCP를 준수하게 된다.
 
@@ -173,11 +173,11 @@ let circle = Circle(radius: 10)
 printArea(circle)
 ```
 
-이제 Circle class를 사용하는 코드를 작성해 보면,
+이제 `Circle` class를 사용하는 코드를 작성해 보면,
 
 위 코드에서 `printArea` 함수는 `Shape` 객체를 매개변수로 받아 해당 객체의 면적(area)을 출력하는 함수이다. 이 함수에 Circle 객체를 전달해도 원의 면적이 정상적으로 출력된다.
 
-하지만 이 코드에서 문제가 발생할 수 있다. 예를 들어, Circle class를 상속받는 Ellipse class를 추가하고 Ellipse class의 area 메서드를 다음과 같이 재정의하는 경우를 생각해보자.
+하지만 이 코드에서 문제가 발생할 수 있다. 예를 들어, Circle class를 상속받는 Ellipse class를 추가하고 Ellipse class의 area 함수를 다음과 같이 재정의하는 경우를 생각해보자.
 
 ```swift
 class Ellipse: Circle {
@@ -203,15 +203,13 @@ printArea(ellipse)
 
 위 코드에서는 `printArea` 함수에 `Ellipse` 객체를 전달합니다. 하지만 `Ellipse` class는 `Circle` class를 상속받았지만 `Circle` class의 `radius` 프로퍼티는 하나밖에 없는 반면, `Ellipse` class는 `radius2` 프로퍼티도 추가로 가지고 있다. 따라서 `Ellipse` 객체를 `Circle` 객체처럼 사용하는 것은 LSP를 위배하게 된다.
 
-따라서 LSP를 준수하기 위해서는 `Circle` class와 `Ellipse` class를 별도로 구현하는 것이 좋다. 이를 통해 각각의 class는 자신만의 속성과 메서드를 갖게 되고, `Shape` class는 공통된 속성과 메서드를 정의하는 역할을 할 수 있다. 이는 객체지향의 다형성을 유지하는데에도 도움을 준다.
+따라서 LSP를 준수하기 위해서는 `Circle` class와 `Ellipse` class를 별도로 구현하는 것이 좋다. 이를 통해 각각의 class는 자신만의 속성과 함수를 갖게 되고, `Shape` class는 공통된 속성과 함수를 정의하는 역할을 할 수 있다. 이는 <u>객체지향의 다형성을 유지</u>하는데 도움을 준다.
 
 > 1988년 바바라 리스코프(Barbara Liskov)가 정의한, 하위 타입(subtype)에 관한 유명한 원칙이다. 요약하면, 상호 대체 가능한 구성요소를 이용해 소프트웨어의 시스템을 만들 수 있으려면, 이들 구성요소는 반드시 서로 치환 가능해야 한다는 계약을 반드시 지켜야한다.<br/><br/>
 「Clean Architecture 中」
 
 ## [ISP] 인터페이스 분리 원칙 - Interface Segregation Principle
 Interface Segregation Principle(ISP)는 하나의 클라이언트가 사용하지 않는 인터페이스에 의존하지 않도록 하기 위한 객체지향 설계 원칙이다.
-
-다음과 같은 protocol이 있다고 가정해보면,
 
 ```swift
 protocol Worker {
@@ -221,9 +219,9 @@ protocol Worker {
 }
 ```
 
-위의 protocol에서는 `work()`, `eat()`, `sleep()` 함수가 모두 포함되어 있다. 그러나, 실제로 이 protocol을 구현하는 class에서는 모든 함수를 사용하지 않을 수 있다. 예를 들어, `Farmer` class에서는 일하는 메서드만 필요할 수 있다. 이 경우, `Farmer` class에서는 `eat()`와 `sleep()` 함수를 구현하지 않더라도, protocol을 구현하는 것이 강제됩니다.
+위의 protocol에서는 `work()`, `eat()`, `sleep()` 함수가 모두 포함되어 있다. 그러나, 실제로 이 protocol을 구현하는 class에서는 모든 함수를 사용하지 않을 수 있다. 예를 들어, `Farmer` class에서는 일하는 함수만 필요할 수 있다. 이 경우, `Farmer` class에서는 `eat()`와 `sleep()` 함수를 구현하지 않더라도, protocol을 구현하는 것이 강제됩니다.
 
-이러한 경우, ISP를 준수하면 인터페이스를 적절하게 분리할 수 있다. `Farmer` class에서는 `work()` 메서드만 필요하므로, 따로 분리된 `Workable` protocol을 구현하는 것이 더 적절하다.
+이러한 경우, ISP를 준수하면 인터페이스를 적절하게 분리할 수 있다. `Farmer` class에서는 `work()` 함수만 필요하므로, 따로 분리된 `Workable` protocol을 구현하는 것이 더 적절하다.
 
 ```swift
 protocol Workable {
@@ -245,14 +243,76 @@ class Farmer: Workable {
 }
 ```
 
-위와 같이 인터페이스를 적절하게 분리하여, `Farmer` class에서 필요한 기능만 구현할 수 있으며, 불필요한 메서드에 대한 의존성이 제거된다. 이는 코드의 유연성과 확장성을 높이는데 도움을 준다.
+위와 같이 인터페이스를 적절하게 분리하여, `Farmer` class에서 필요한 기능만 구현할 수 있으며, <u>불필요한 함수에 대한 의존성이 제거</u>된다. 이는 코드의 유연성과 확장성을 높이는데 도움을 준다.
 
 > 이 원칙에 따르면 소프트웨어 설계자는 사용하지 않은 것에 의존하지 않아야 한다.<br/><br/>
 「Clean Architecture 中」
 
 
 ## [DIP] 의존 역전 원칙 - Dependency Inversion Principle
+Dependency Inversion Principle(DIP)는 상위 수준의 모듈이 하위 수준의 모듈에 의존하지 않도록 하며, 둘 모두 추상화된 인터페이스에 의존해야 한다는 객체지향 설계 원칙이다.
 
+```swift
+class Heater {
+  func on() {
+    // 히터를 켜는 로직
+  }
+  
+  func off() {
+    // 히터를 끄는 로직
+  }
+}
+
+class CoffeeMachine {
+  private let heater = Heater()
+  
+  func makeCoffee() {
+    heater.on()
+    // 커피를 내리는 로직
+    heater.off()
+  }
+}
+```
+
+위 코드에서는 `CoffeeMachine` 에서 `Heater` 를 직접 의존하고 있다. 이는 DIP를 위반한 예제이다. 이 코드에서는 `CoffeeMachine`가 상위 수준의 모듈이고, Heater가 하위 수준의 모듈이기 때문이다.
+
+DIP를 준수하도록 코드를 수정하려면, 먼저, `Heater` class를 protocol로 추상화해야 한다.
+```swift
+protocol Switchable {
+  func on()
+  func off()
+}
+
+class Heater: Switchable {
+  func on() {
+    // 히터를 켜는 로직
+  }
+  
+  func off() {
+    // 히터를 끄는 로직
+  }
+}
+```
+
+다음으로, `CoffeeMachine` class에서 `Switchable` protocol을 의존하도록 수정한다.
+
+```swift
+class CoffeeMachine {
+  private let switchable: Switchable
+  
+  init(switchable: Switchable) {
+    self.switchable = switchable
+  }
+  
+  func makeCoffee() {
+    switchable.on()
+    // 커피를 내리는 로직
+    switchable.off()
+  }
+}
+```
+
+위와 같이, `CoffeeMachine` class에서는 `Heater` class 대신에 `Switchable` protocol을 의존하도록 변경했다. `CoffeeMachine` class는 추상화된 인터페이스에만 의존하게 되어 <u>상위 수준의 모듈이 하위 수준의 모듈에 의존하지 않도록</u> 할 수 있다. 이는 코드의 유연성과 확장성을 높이는데 도움을 준다.
 
 > 고수준 정책을 구현하는 코드는 저수준 세부사항을 구현하는 코드에 절대로 의존해서는 안 된다. 대신 세부사항이 정책에 의존해야 한다.<br/><br/>
 「Clean Architecture 中」
